iterations in code to scrape run out data

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 venv
 all_csv2
+data
+data - Copy
+problems_solved_runout_details
+problems_v2_probs
+problems_v2_solving_copied_to_data
+problems_v3_copied_to_data
+problems_v3_probs
+error_log*.txt
+data.zip
